--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   riverpod: ^2.4.6
   flutter_riverpod: ^2.4.6
   http: ^1.1.0
+  get_it: ^7.6.4
 
 dev_dependencies:
   flutter_test:
